plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.0.0-beta4'
}

group = 'com.blockforge'
version = '2.0.0'

repositories {
    mavenCentral()
    maven { url 'https://repo.papermc.io/repository/maven-public/' }
    maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
    maven { url 'https://jitpack.io' }
    maven { url 'https://maven.citizensnpcs.co/repo' }
    maven { url 'https://maven.playpro.com' }
    maven { url 'https://repo.alessiodp.com/releases/' }
    // Local libs folder for optional anticheat API JARs
    flatDir { dirs '../libs' }
}

dependencies {
    // Paper API for Minecraft 1.21
    compileOnly 'io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT'

    // LuckPerms API
    compileOnly 'net.luckperms:api:5.4'

    // PlaceholderAPI
    compileOnly 'me.clip:placeholderapi:2.11.6'

    // Citizens API for NPC replays
    compileOnly 'net.citizensnpcs:citizens-main:2.0.35-SNAPSHOT'

    // CoreProtect API for block logging integration
    compileOnly 'net.coreprotect:coreprotect:23.1'

    // Database - HikariCP connection pool
    implementation 'com.zaxxer:HikariCP:5.1.0'

    // SLF4J for HikariCP logging
    implementation 'org.slf4j:slf4j-api:2.0.12'
    implementation 'org.slf4j:slf4j-simple:2.0.12'

    // SQLite JDBC driver
    implementation 'org.xerial:sqlite-jdbc:3.45.3.0'

    // MySQL Connector
    implementation 'com.mysql:mysql-connector-j:8.3.0'

    // WebSocket server
    implementation 'org.java-websocket:Java-WebSocket:1.5.6'

    // JSON processing
    implementation 'com.google.code.gson:gson:2.11.0'

    // GeoIP2 for geographic IP lookups
    implementation 'com.maxmind.geoip2:geoip2:4.2.1'

    // Adventure API (included in Paper but good to have explicit)
    compileOnly 'net.kyori:adventure-api:4.17.0'
    compileOnly 'net.kyori:adventure-text-minimessage:4.17.0'

    // Netty (provided by Minecraft server, used for same-port HTTP handling)
    compileOnly 'io.netty:netty-all:4.1.97.Final'

    // Optional: Anticheat API JARs in /libs folder for direct API access
    // ModereX uses reflection by default, so these are NOT required
    // Place anticheat plugin JARs in /libs if you want compile-time API access
    compileOnly fileTree(dir: '../libs', include: ['*.jar'])

    // Testing
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

shadowJar {
    archiveClassifier.set('')
    archiveFileName.set("ModereX-${version}.jar")

    relocate 'com.zaxxer.hikari', 'com.blockforge.moderex.lib.hikari'
    relocate 'org.java_websocket', 'com.blockforge.moderex.lib.websocket'
    relocate 'com.google.gson', 'com.blockforge.moderex.lib.gson'
    relocate 'org.slf4j', 'com.blockforge.moderex.lib.slf4j'
    relocate 'com.maxmind.geoip2', 'com.blockforge.moderex.lib.geoip2'
    relocate 'com.maxmind.db', 'com.blockforge.moderex.lib.maxminddb'

    // Don't minimize - include all dependency classes to avoid ClassNotFound errors
    // minimize() can aggressively remove classes that are loaded via reflection
}

tasks.named('build') {
    dependsOn shadowJar
}

processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset 'UTF-8'
    filesMatching(['plugin.yml', 'paper-plugin.yml']) {
        expand props
    }
}
